Lucene Benchmark Contrib Change Log

The Benchmark contrib package contains code for benchmarking Lucene in a variety of ways.

1/14/2010
  LUCENE-2210: TrecTopicsReader now properly reads descriptions and
  narratives from trec topics files.  (Robert Muir)

1/11/2010
  LUCENE-2181: Add a benchmark for collation. This adds NewLocaleTask,
  which sets a Locale in the run data for collation to use, and can be
  used in the future for benchmarking localized range queries and sorts.
  Also add NewCollationAnalyzerTask, which works with both JDK and ICU
  Collator implementations. Fix ReadTokensTask to not tokenize fields
  unless they should be tokenized according to DocMaker config. The 
  easiest way to run the benchmark is to run 'ant collation'
  (Steven Rowe via Robert Muir)

12/22/2009
  LUCENE-2178: Allow multiple locations to add to the class path with
  -Dbenchmark.ext.classpath=... when running "ant run-task" (Steven
  Rowe via Mike McCandless)

12/17/2009
  LUCENE-2168: Allow negative relative thread priority for BG tasks
  (Mike McCandless)

12/07/2009
  LUCENE-2106: ReadTask does not close its Reader when 
  OpenReader/CloseReader are not used. (Mark Miller)

11/17/2009
  LUCENE-2079: Allow specifying delta thread priority after the "&";
  added log.time.step.msec to print per-time-period counts; fixed
  NearRealTimeTask to print reopen times (in msec) of each reopen, at
  the end.  (Mike McCandless)

11/13/2009
  LUCENE-2050: Added ability to run tasks within a serial sequence in
  the background, by appending "&".  The tasks are stopped & joined at
  the end of the sequence.  Also added Wait and RollbackIndex tasks.
  Genericized NearRealTimeReaderTask to only reopen the reader
  (previously it spawned its own thread, and also did searching).
  Also changed the API of PerfRunData.getIndexReader: it now returns a
  reference, and it's your job to decRef the reader when you're done
  using it.  (Mike McCandless)

11/12/2009